# 2110584-game-engine

./: .gitignore  CMakeLists.txt  README.md
resources/objects/maria/: Fast Run.dae  Jump.dae  Walking.dae
shaders/: model.fs
src/: camera.h  glad.c  main.cpp  shader.h
src/shaders/: kinetic_sculpture.fs  shader.fs
